force-app/main/default/objects/Account/fields/Active_Contacts_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Contacts_Count__c</fullName>
    <label>Active Contacts Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>