force-app/main/default/objects/Account/fields/GreenCard_Applied__c.field-meta.xml
<CustomField>
    <fullName>GreenCard_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GreenCard Applied?</label>
    <type>Checkbox</type>
</CustomField>