force-app/main/default/objects/Account/fields/Loyalty_Tier__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Tier__c</fullName>
    <formula>IF(Loyalty_Points__c &lt;= 29999, &apos;Bronze&apos;,

 IF(Loyalty_Points__c &gt;= 30000 &amp;&amp; Loyalty_Points__c &lt;= 59999, &apos;Silver&apos;, &apos;Gold&apos; ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loyalty Tier</label>
    <type>Text</type>
</CustomField>