force-app/main/default/objects/Account/fields/Opportunity_Details__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Details__c</fullName>
    <label>Opportunity Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>