force-app/main/default/objects/Account/fields/Sum_of_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Amount__c</fullName>
    <label>Sum of Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>