force-app/main/default/objects/Account/fields/Total_Opportunity_Products__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunity_Products__c</fullName>
    <label>Total Opportunity Products</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>