force-app/main/default/objects/Account/fields/Total_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchase__c</fullName>
    <label>Total Purchase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>